@@ -85,6 +85,19 @@ unless prefs[:frontend] == 'bootstrap4'
   prefs[:form_builder] = multiple_choice "Use a form builder gem?", [["None", "none"], ["SimpleForm (incompatible with Rails 5.1)", "simple_form"]] unless prefs.has_key? :form_builder
 end
 
+## jQuery
+if Rails::VERSION::MAJOR == 5 && Rails::VERSION::MINOR >= 1
+  if prefs[:frontend] == 'none'
+    prefs[:jquery] = multiple_choice "Add jQuery?", [["No", "none"],
+      ["Add jquery-rails gem", "gem"],
+      ["Add using yarn", "yarn"]] unless prefs.has_key? :jquery
+  else
+    prefs[:jquery] = multiple_choice "How to install jQuery?",
+      [["Add jquery-rails gem", "gem"],
+      ["Add using yarn", "yarn"]] unless prefs.has_key? :jquery
+  end
+end
+
 ## Pages
 if recipes.include? 'pages'
   prefs[:pages] = multiple_choice "Add pages?", [["None", "none"],
