@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.1.25 May 15, 2017
+
+* add jQuery option via gem or yarn (because Rails 5.1 drops jQuery and Bootstrap needs it)
+
 h3. 3.1.24 May 7, 2017
 
 * 'secrets.yml' file in Rails 5 contains string 'production:' twice
